[metadata]
name = aisegcell
author = Melinda Kondorosy and Daniel Schirmacher
author_email = daniel.schirmacher@bsse.ethz.ch
license = BSD-3
url = https://github.com/CSDGroup/aisegcell
description = segments cells in transmitted light images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CSDGroup/aisegcell/issues
    Documentation = 'https://github.com/CSDGroup/aisegcell#README.md'
    Source Code = https://github.com/CSDGroup/aisegcell
    User Support = https://github.com/CSDGroup/aisegcell/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    matplotlib
    numpy
    pandas
    scikit-image

[options.extras_require]
dev =
    pre-commit>=2.9.0
    black==20.8b1
    flake8==3.8.4
    check-manifest>=0.42
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    aisegcell_train = aisegcell.aisegcell:train
    aisegcell_test = aisegcell.aisegcell:test_cli
    aisegcell_predict = aisegcell.aisegcell:predict_cli
    aisegcell_generate_list = aisegcell.preprocessing.generate_list:main

[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = _vendor,vendored,__init__.py,examples,benchmarks,napari/resources/_qt_resources*.py
